# DataSifter

./: .readthedocs.yml  README.md  README.rst  pyproject.toml
datasifter/: __init__.py  bw_eng.txt  bw_ru.txt
docs/: conf.py  index.rst
docs/_static/css/: default.css
docs/_static/stylesheets/: default.css
docs/_static_/stylesheets/: default.css
docs/filters/: index.rst
tests/: __init__.py
